fix width and bug masonry

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                                  <a href="assets/images/portfolio/vr-mbloc-1.jpg" class="image-link">
                                     <img src="assets/images/portfolio/vr-mbloc-1.jpg" alt="Image">
                                  </a>
-                                 <div class="portfolio__single-content">
+                                 <div class="portfolio__single-content d-none d-lg-flex">
                                     <a href="#">
                                        <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                     </a>
@@ -410,7 +410,7 @@
                                  <a href="assets/images/portfolio/grand_launch_tigersoju_2023_10.jpg" class="image-link">
                                     <img src="assets/images/portfolio/grand_launch_tigersoju_2023_10.jpg" alt="Image">
                                  </a>
-                                 <div class="portfolio__single-content">
+                                 <div class="portfolio__single-content d-none d-lg-flex">
                                     <a href="#">
                                        <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                     </a>
@@ -425,7 +425,7 @@
                                  <a href="assets/images/portfolio/icecream.jpg" class="image-link">
                                     <img src="assets/images/portfolio/icecream.jpg" alt="Image">
                                  </a>
-                                 <div class="portfolio__single-content">
+                                 <div class="portfolio__single-content d-none d-lg-flex">
                                     <a href="#">
                                        <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                     </a>
@@ -440,7 +440,7 @@
                                  <a href="assets/images/portfolio/tigerbeer.jpg" class="image-link">
                                     <img src="assets/images/portfolio/tigerbeer.jpg" alt="Image">
                                  </a>
-                                 <div class="portfolio__single-content">
+                                 <div class="portfolio__single-content d-none d-lg-flex">
                                     <a href="#">
                                        <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                     </a>
@@ -455,7 +455,7 @@
                                  <a href="assets/images/portfolio/tppi.jpg" class="image-link">
                                     <img src="assets/images/portfolio/tppi.jpg" alt="Image">
                                  </a>
-                                 <div class="portfolio__single-content">
+                                 <div class="portfolio__single-content d-none d-lg-flex">
                                     <a href="#">
                                        <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                     </a>
@@ -470,7 +470,7 @@
                                  <a href="assets/images/portfolio/miller-world.jpg" class="image-link">
                                     <img src="assets/images/portfolio/miller-world.jpg" alt="Image">
                                  </a>
-                                 <div class="portfolio__single-content">
+                                 <div class="portfolio__single-content d-none d-lg-flex">
                                     <a href="#">
                                        <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                     </a>
@@ -485,7 +485,7 @@
                                  <a href="assets/images/portfolio/animation.jpg" class="image-link">
                                     <img src="assets/images/portfolio/animation.jpg" alt="Image">
                                  </a>
-                                 <div class="portfolio__single-content">
+                                 <div class="portfolio__single-content d-none d-lg-flex">
                                     <a href="#">
                                        <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                     </a>
@@ -500,7 +500,7 @@
                                  <a href="assets/images/portfolio/web4.jpg" class="image-link">
                                     <img src="assets/images/portfolio/web4.jpg" alt="Image">
                                  </a>
-                                 <div class="portfolio__single-content">
+                                 <div class="portfolio__single-content d-none d-lg-flex">
                                     <a href="#">
                                        <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                     </a>
@@ -515,7 +515,7 @@
                                  <a href="assets/images/portfolio/falken.jpg" class="image-link">
                                     <img src="assets/images/portfolio/falken.jpg" alt="Image">
                                  </a>
-                                 <div class="portfolio__single-content">
+                                 <div class="portfolio__single-content d-none d-lg-flex">
                                     <a href="#">
                                        <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                     </a>
@@ -530,7 +530,7 @@
                                  <a href="assets/images/portfolio/web1.jpg" class="image-link">
                                     <img src="assets/images/portfolio/web1.jpg" alt="Image">
                                  </a>
-                                 <div class="portfolio__single-content">
+                                 <div class="portfolio__single-content d-none d-lg-flex">
                                     <a href="#">
                                        <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                     </a>
@@ -545,7 +545,7 @@
                                  <a href="assets/images/portfolio/web2.jpg" class="image-link">
                                     <img src="assets/images/portfolio/web2.jpg" alt="Image">
                                  </a>
-                                 <div class="portfolio__single-content">
+                                 <div class="portfolio__single-content d-none d-lg-flex">
                                     <a href="#">
                                        <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                     </a>
@@ -560,7 +560,7 @@
                                  <a href="assets/images/portfolio/web3.jpg" class="image-link">
                                     <img src="assets/images/portfolio/web3.jpg" alt="Image">
                                  </a>
-                                 <div class="portfolio__single-content">
+                                 <div class="portfolio__single-content d-none d-lg-flex">
                                     <a href="#">
                                        <i class="fa-sharp fa-solid fa-arrow-up-right"></i>
                                     </a>
